--- a/GrippersConfigurator.html
+++ b/GrippersConfigurator.html
@@ -4,6 +4,7 @@
 	</head>
 	<body>
 	<h1>XEG grippers</h1>
+	<img src="XEG-32.png" alt="XEG grippers" width="200">
 		<form name="xegform">
 			<table  class="tab_config">
 				<thead>
@@ -360,6 +361,7 @@
 			}
 		</script>
 		<h1>SEG/STG grippers</h1>
+		<img src="SEG.png" alt="SEG/STG grippers" width="200">
 		<form name="segform">
 			<table  class="tab_config">
 				<thead>
