--- a/GrippersConfigurator.html
+++ b/GrippersConfigurator.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Hiwin grippers configurator</title>
+		<link rel="stylesheet" href="teststyle.css">
 	</head>
 	<body>
 	<h1>XEG grippers</h1>
@@ -173,8 +174,8 @@
 				</tr>
 			</table>
 			<br>
-			Gripper code: <b><label id="codelabelxeg">XEG-32-C2101-NO-W2-NO</label></b><br><br>
-			Description: <i><label id="descrlabelxeg">2-finger type, total stroke 32 mm, C2 controller (communication: I/O, Modbus RTU), 1.5M actuator cable length, 1.5M I/O cable length, no RS485 communication, software controller setting kit, no optional</label></i>
+			<p>Gripper code: <b><label id="codelabelxeg">XEG-32-C2101-NO-W2-NO</label></b></p>
+			<p>Description: <i><label id="descrlabelxeg">2-finger type, total stroke 32 mm, C2 controller (communication: I/O, Modbus RTU), 1.5M actuator cable length, 1.5M I/O cable length, no RS485 communication, software controller setting kit, no optional</label></i></p>
 		</form>
 		<script>
 			function changeXEGCode()
@@ -464,8 +465,8 @@
 				</tr>
 			</table>
 			<br>
-			Gripper code: <b><label id="codelabelseg">SEG-24-10</label></b><br><br>
-			Description: <i><label id="descrlabelseg">total stroke 24 mm, 2-finger type, 1.0M straight connector, no sensor, NPN type</label></i>
+			<p>Gripper code: <b><label id="codelabelseg">SEG-24-10</label></b></p>
+			<p>Description: <i><label id="descrlabelseg">total stroke 24 mm, 2-finger type, 1.0M straight connector, no sensor, NPN type</label></i></p>
 		</form>
 		<script>
 			function changeSEGCode()
